# ogre-headless-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: OgreHeadlessApi.h  OgreHeadlessFwd.h  OgreHeadlessPlugin.h  OgreHeadlessRenderSystem.h  OgreHeadlessTextureManager.h
src/: OgreHeadlessPlugin.cpp  OgreHeadlessRenderSystem.cpp  OgreHeadlessTextureManager.cpp
